Internationalize Travel Trajectory components
🌍 **Travel Trajectory Internationalization:**

**Problem Identified:**
- Travel Trajectory section had hardcoded Chinese strings
- Components not properly internationalized for multi-language support
- Missing translation keys for trajectory-related UI elements

**Components Updated:**

1. **TrajectoryMap Component**
   - Replaced hardcoded '旅行轨迹地图' with t('trajectoryMap.title')
   - Internationalized legend labels: '居住', '工作', '访问' → t('trajectoryMap.legend.*')
   - Updated loading text: '加载地图中...' → t('trajectoryMap.loading')
   - Fixed instructions: '点击城市标记查看详细信息 • 虚线显示旅行路径' → t('trajectoryMap.instructions')

2. **Cities Page Trajectory Section**
   - Updated trajectory type display in list view
   - Internationalized form titles: '添加轨迹', '编辑轨迹' → t('trajectoryForm.*')
   - Fixed notes placeholder: '记录一些关于这次旅行的感受...' → t('trajectoryForm.notesPlaceholder')

**Translation Keys Added:**

**English (en.json):**
- trajectoryMap.title: 'Travel Trajectory Map'
- trajectoryMap.loading: 'Loading map...'
- trajectoryMap.instructions: 'Click city markers to view details • Dashed lines show travel paths'
- trajectoryMap.legend.residence/work/visit/unknown
- trajectoryForm.addTrajectory/editTrajectory/notesPlaceholder

**Chinese (zh.json):**
- trajectoryMap.title: '旅行轨迹地图'
- trajectoryMap.loading: '加载地图中...'
- trajectoryMap.instructions: '点击城市标记查看详细信息 • 虚线显示旅行路径'
- trajectoryMap.legend.residence/work/visit/unknown
- trajectoryForm.addTrajectory/editTrajectory/notesPlaceholder

**Japanese (ja.json):**
- trajectoryMap.title: '旅行軌跡マップ'
- trajectoryMap.loading: 'マップを読み込み中...'
- trajectoryMap.instructions: '都市マーカーをクリックして詳細を表示 • 破線は旅行ルートを示します'
- trajectoryMap.legend.residence/work/visit/unknown
- trajectoryForm.addTrajectory/editTrajectory/notesPlaceholder

**Spanish (es.json):**
- trajectoryMap.title: 'Mapa de Trayectoria de Viaje'
- trajectoryMap.loading: 'Cargando mapa...'
- trajectoryMap.instructions: 'Haz clic en los marcadores de 

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -536,6 +536,22 @@
       "totalDays": "Total Days",
       "totalCities": "Total Cities"
     },
+    "trajectoryMap": {
+      "title": "Travel Trajectory Map",
+      "loading": "Loading map...",
+      "instructions": "Click city markers to view details • Dashed lines show travel paths",
+      "legend": {
+        "residence": "Residence",
+        "work": "Work",
+        "visit": "Visit",
+        "unknown": "Unknown"
+      }
+    },
+    "trajectoryForm": {
+      "addTrajectory": "Add Trajectory",
+      "editTrajectory": "Edit Trajectory",
+      "notesPlaceholder": "Record some thoughts about this trip..."
+    },
     "recommendations": {
       "priorityIndicator": "Priority Indicator",
       "algorithmExplanation": "We generate recommendations based on WiFi speed, cost of living, visa days, climate comfort, and social atmosphere.",
