Add missing city detail page translation keys
🌐 **City Detail Page Translation Keys:**

**Problem Identified:**
- Multiple translation key warnings for city detail page components
- Missing keys for quickStats, costLevel, wifiSpeed, visaStay, etc.
- Incomplete internationalization for city detail functionality

**Solution Implemented:**

**1. Added Missing Translation Keys:**

**English (en.json):**
- ✅ quickStats: 'Quick Stats'
- ✅ costLevel: { low: 'Low', moderate: 'Moderate', high: 'High' }
- ✅ wifiSpeed: 'WiFi Speed'
- ✅ wifiLevel: { poor: 'Poor', fair: 'Fair', good: 'Good', excellent: 'Excellent' }
- ✅ visaStay: 'Visa Stay'
- ✅ visaDifficulty: { easy: 'Easy', medium: 'Medium', hard: 'Hard' }
- ✅ nomadCommunity: 'Nomad Community'
- ✅ communityActivity: { low: 'Low', medium: 'Medium', high: 'High' }
- ✅ activeNomads: 'Active Nomads'
- ✅ aboutCity: 'About {city}'
- ✅ cityDescription: '{city} is a vibrant city in {country} with a cost of living around /month, WiFi speeds averaging {wifi}Mbps, and visa-free stays of up to {visa} days for most nationalities.'
- ✅ pros: { affordableCost, goodWifi, longVisa, nomadFriendly }
- ✅ cons: { languageBarrier, weatherIssues, transportation }
- ✅ actions: 'Actions'
- ✅ rateCity: 'Rate City'
- ✅ addToFavorites: 'Add to Favorites'
- ✅ share: 'Share'
- ✅ quickInfo: 'Quick Info'
- ✅ timezone: 'Timezone'
- ✅ coordinates: 'Coordinates'

**Chinese (zh.json):**
- ✅ quickStats: '快速统计'
- ✅ costLevel: { low: '低', moderate: '中等', high: '高' }
- ✅ wifiSpeed: 'WiFi速度'
- ✅ wifiLevel: { poor: '差', fair: '一般', good: '良好', excellent: '优秀' }
- ✅ visaStay: '签证停留'
- ✅ visaDifficulty: { easy: '简单', medium: '中等', hard: '困难' }
- ✅ nomadCommunity: '数字游民社区'
- ✅ communityActivity: { low: '低', medium: '中等', high: '高' }
- ✅ activeNomads: '活跃游民'
- ✅ aboutCity: '关于{city}'
- ✅ cityDescription: '{city}是{country}的一个充满活力的城市，生活成本约/月，WiFi速度平均{wifi}Mbps，大多数国籍可免签停留{visa}天。'
- ✅ pros: { affordableCost, goodWifi, longVisa, nomadFriendly }
- ✅ cons: { languageBarrier, w

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -190,6 +190,52 @@
     "writeReview": "Write Review",
     "userReviews": "User Reviews",
     "other": "Other",
+    "quickStats": "Quick Stats",
+    "costLevel": {
+      "low": "Low",
+      "moderate": "Moderate",
+      "high": "High"
+    },
+    "wifiSpeed": "WiFi Speed",
+    "wifiLevel": {
+      "poor": "Poor",
+      "fair": "Fair",
+      "good": "Good",
+      "excellent": "Excellent"
+    },
+    "visaStay": "Visa Stay",
+    "visaDifficulty": {
+      "easy": "Easy",
+      "medium": "Medium",
+      "hard": "Hard"
+    },
+    "nomadCommunity": "Nomad Community",
+    "communityActivity": {
+      "low": "Low",
+      "medium": "Medium",
+      "high": "High"
+    },
+    "activeNomads": "Active Nomads",
+    "aboutCity": "About {city}",
+    "cityDescription": "{city} is a vibrant city in {country} with a cost of living around ${cost}/month, WiFi speeds averaging {wifi}Mbps, and visa-free stays of up to {visa} days for most nationalities.",
+    "pros": {
+      "affordableCost": "Affordable cost of living",
+      "goodWifi": "Good WiFi infrastructure",
+      "longVisa": "Long visa-free stay",
+      "nomadFriendly": "Nomad-friendly environment"
+    },
+    "cons": {
+      "languageBarrier": "Language barrier",
+      "weatherIssues": "Weather issues",
+      "transportation": "Transportation challenges"
+    },
+    "actions": "Actions",
+    "rateCity": "Rate City",
+    "addToFavorites": "Add to Favorites",
+    "share": "Share",
+    "quickInfo": "Quick Info",
+    "timezone": "Timezone",
+    "coordinates": "Coordinates",
       "utilities": "Utilities",
       "entertainment": "Entertainment",
     "transportation": "Transportation",
@@ -1708,8 +1754,8 @@
     "searchPlaceholder": "Search places...",
     "description": "Discover the best places for remote work",
     "title": "Nomad Place Recommendations"
-      },
-      "guides": {
+  },
+  "guides": {
     "categories": {
       "cohabitation": "Cohabitation",
       "moving": "Moving",
