Add comprehensive tax strategy guide translations for Japanese
🌐 **Tax Strategy Guide Japanese Translations:**

**Problem Identified:**
- Multiple translation key warnings for tax strategy guide in Japanese locale
- Missing comprehensive strategy guide translations for Japanese users
- Incomplete internationalization for tax optimization strategies

**Solution Implemented:**

**1. Added Complete Strategy Guide Structure:**

**Main Strategy Guide Keys:**
- ✅ title: '税金戦略ガイド'
- ✅ viewAdvisors: 'アドバイザーを表示'
- ✅ difficultyFilter: '難易度フィルター'
- ✅ allDifficulties: 'すべての難易度'
- ✅ strategyType: '戦略タイプ'
- ✅ allTypes: 'すべてのタイプ'
- ✅ successRate: '成功率'
- ✅ hasAdvisor: 'アドバイザーあり'

**Difficulty Levels:**
- ✅ easy: '簡単'
- ✅ medium: '中程度'
- ✅ hard: '困難'

**Strategy Categories:**
- ✅ taxHaven: '税金天国'
- ✅ territorial: '領土税制'
- ✅ companyStructure: '会社構造'
- ✅ visaStrategy: 'ビザ戦略'
- ✅ taxTreaty: '税金条約'

**2. Comprehensive Strategy Translations:**

**NHR Portugal Strategy:**
- ✅ Complete title and description
- ✅ 6 detailed requirements with Japanese context
- ✅ 7 step-by-step implementation guide
- ✅ 5 practical tips for success

**Territorial Tax Strategy:**
- ✅ Complete territorial tax system explanation
- ✅ 4 key requirements for implementation
- ✅ 6 detailed implementation steps
- ✅ 4 essential tips for compliance

**Company Structure Optimization:**
- ✅ Offshore company structure strategy
- ✅ Savings potential: '年間,000-200,000'
- ✅ Implementation time: '6-12ヶ月'
- ✅ 4 detailed requirements
- ✅ 6 comprehensive implementation steps
- ✅ 4 professional tips

**Digital Nomad Visa Strategy:**
- ✅ Visa-based tax optimization approach
- ✅ Savings potential: '年間,000-50,000'
- ✅ Implementation time: '3-6ヶ月'
- ✅ 4 visa requirements
- ✅ 6 visa application steps
- ✅ 4 compliance tips

**Tax Treaty Optimization:**
- ✅ Bilateral tax treaty utilization
- ✅ Savings potential: '年間,000-30,000'
- ✅ Implementation time: '3-6ヶ月'
- ✅ 4 treaty requirements
- ✅ 6 optimization steps
- ✅ 4 compliance tips

**3. 

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -2730,6 +2730,162 @@
       "moderate": "中程度の税金",
       "highTax": "高税金"
     },
+    "strategyGuide": {
+      "title": "税金戦略ガイド",
+      "viewAdvisors": "アドバイザーを表示",
+      "difficultyFilter": "難易度フィルター",
+      "allDifficulties": "すべての難易度",
+      "difficulty": {
+        "easy": "簡単",
+        "medium": "中程度",
+        "hard": "困難"
+      },
+      "strategyType": "戦略タイプ",
+      "allTypes": "すべてのタイプ",
+      "categories": {
+        "taxHaven": "税金天国",
+        "territorial": "領土税制",
+        "companyStructure": "会社構造",
+        "visaStrategy": "ビザ戦略",
+        "taxTreaty": "税金条約"
+      },
+      "successRate": "成功率",
+      "hasAdvisor": "アドバイザーあり",
+      "strategies": {
+        "nhrPortugal": {
+          "title": "ポルトガルNHR計画",
+          "description": "ポルトガルの非通常居住者制度を活用した税金最適化戦略"
+        },
+        "nhrPlan": {
+          "requirements": [
+            "2024年1月1日以前の申請（締切済み）",
+            "または高技能職業で年収€75,000以上",
+            "年間183日以上ポルトガルに居住",
+            "過去5年間ポルトガル税務居住者ではない",
+            "高技能職業の証明書",
+            "所得証明書"
+          ],
+          "steps": [
+            "ポルトガルでの居住を確立",
+            "NHR申請を提出",
+            "高技能職業の証明を準備",
+            "所得証明書を取得",
+            "税務居住者として登録",
+            "10年間の優遇税率を享受",
+            "継続的なコンプライアンスを維持"
+          ],
+          "tips": [
+            "申請期限に注意",
+            "高技能職業の証明を準備",
+            "所得記録を保持",
+            "税務アドバイザーに相談",
+            "継続的なコンプライアンス"
+          ]
+        },
+        "territorialTax": {
+          "title": "領土税制戦略",
+          "description": "領土税制を採用する国での税金最適化戦略",
+          "requirements": [
+            "領土税制国の税務居住者になる",
+            "外国所得を現地に送金しない",
+            "現地所得のみ課税対象",
+            "適切な記録を保持"
+          ],
+          "steps": [
+            "領土税制国を選択",
+            "税務居住者として登録",
+            "外国所得の送金を避ける",
+            "現地所得のみを報告",
+            "適切な記録を保持",
+            "継続的なコンプライアンス"
+          ],
+          "tips": [
+            "送金ルールを理解",
+            "記録を保持",
+            "税務アドバイザーに相談",
+            "継続的なコンプライアンス"
+          ]
+        },
+        "companyStructure": {
+          "title": "会社構造最適化",
+          "description": "オフショア会社を通じた税金構造最適化",
+          "savings": "年間$50,000-200,000",
+          "timeToImplement": "6-12ヶ月",
+          "requirements": [
+            "高所得企業主",
+            "適切なビジネス構造",
+            "コンプライアンス要件の理解",
+            "専門アドバイザーのサポート"
+          ],
+          "steps": [
+            "ビジネス構造を分析",
+            "オフショア会社を設立",
+            "適切な管轄を選択",
+            "税務構造を実装",
+            "コンプライアンスを確保",
+            "継続的な管理"
+          ],
+          "tips": [
+            "専門アドバイザーに相談",
+            "コンプライアンスを重視",
+            "継続的な管理",
+            "リスクを理解"
+          ]
+        },
+        "digitalNomadVisa": {
+          "title": "デジタルノマドビザ戦略",
+          "description": "専用ビザを活用した税金状況最適化",
+          "savings": "年間$10,000-50,000",
+          "timeToImplement": "3-6ヶ月",
+          "requirements": [
+            "リモートワーク可能な職業",
+            "安定した収入",
+            "健康保険",
+            "適切な書類"
+          ],
+          "steps": [
+            "適切なビザを選択",
+            "申請書類を準備",
+            "ビザ申請を提出",
+            "承認を待つ",
+            "ビザを取得",
+            "税金最適化を実装"
+          ],
+          "tips": [
+            "要件を確認",
+            "書類を準備",
+            "申請プロセスを理解",
+            "継続的なコンプライアンス"
+          ]
+        },
+        "taxTreatyOptimization": {
+          "title": "税金条約最適化",
+          "description": "二国間税金条約を活用した二重課税回避",
+          "savings": "年間$5,000-30,000",
+          "timeToImplement": "3-6ヶ月",
+          "requirements": [
+            "関連国間の税金条約の理解",
+            "適切な居住地の選択",
+            "所得の分類",
+            "適切な記録"
+          ],
+          "steps": [
+            "関連税金条約を調査",
+            "最適な居住地を選択",
+            "所得を分類",
+            "税金条約を適用",
+            "適切な記録を保持",
+            "継続的なコンプライアンス"
+          ],
+          "tips": [
+            "税金条約を理解",
+            "専門アドバイザーに相談",
+            "記録を保持",
+            "継続的なコンプライアンス"
+          ]
+        }
+      }
+    },
     "countryDetails": {
       "residencyRequirements": "税金居住要件",
       "residencyDays": "居住日数",
