Add missing translation key for dashboard.setCity
- Added 'setCity' translation key to all language files
- English: 'Set Current City'
- Chinese: '设置当前城市'
- Spanish: 'Establecer Ciudad Actual'
- Japanese: '現在の都市を設定'
- This fixes the 'Translation key not found: dashboard.setCity' error

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -780,7 +780,8 @@
     "visas": "Visa Management",
     "overview": "Overview",
     "title": "Dashboard",
-    "loadingUserData": "Loading user data..."
+    "loadingUserData": "Loading user data...",
+    "setCity": "Set Current City"
   },
   "components": {
     "notificationSystem": {
