--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -2005,7 +2005,7 @@
     "contactUs": {
       "title": "Contáctenos",
       "description": "Si tiene alguna pregunta sobre esta Política de Privacidad o nuestras prácticas de datos, contáctenos:",
-      "email": "Email: privacy@nomadnow.app",
+      "email": "Email: privacy@nomad.now",
       "address": "Dirección: [Su Dirección de Empresa]"
     }
   },
