--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -1812,7 +1812,7 @@
     "contactUs": {
       "title": "お問い合わせ",
       "description": "このプライバシーポリシーまたは当社のデータ処理についてご質問がございましたら、お気軽にお問い合わせください：",
-      "email": "メール：privacy@nomadnow.app",
+      "email": "メール：privacy@nomad.now",
       "address": "住所：[会社住所]"
     }
   },
