--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -2249,7 +2249,7 @@
     "contactUs": {
       "title": "联系我们",
       "description": "如果您对本隐私政策或我们的数据实践有任何问题，请联系我们：",
-      "email": "邮箱：privacy@nomadnow.app",
+      "email": "邮箱：privacy@nomad.now",
       "address": "地址：[您的公司地址]"
     }
   },
